# webcodecs-py

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_LICENSES.md  VERSION  deps.json  intel-vpl-av1-support.patch  pyproject.toml
.github/workflows/: test.yml  wheel.yml
docs/: IDL.md  PYTHON_INTERFACE.md  VIDEOFRAME_METADATA_REGISTRY.md  WEBCODECS_REGISTRATION.md
examples/: aac_to_mp4.py  blend2d_to_mp4.py  camera_to_mp4.py  device_to_mp4.py  noise_to_mp4.py
issues/: ndarray-copy-optimization.md  nvidia-intel-annexb-support.md  nvidia-intel-format-option.md
issues/closed/: ndarray-copy-optimization.md
src/bindings/: audio_data.cpp  audio_data.h  audio_decoder.cpp  audio_decoder.h  audio_decoder_apple_audio_toolbox.cpp  audio_decoder_flac.cpp  audio_decoder_opus.cpp  audio_encoder.cpp  audio_encoder.h  audio_encoder_apple_audio_toolbox.cpp  audio_encoder_flac.cpp  audio_encoder_opus.cpp  avc_parser.cpp  avc_parser.h  bitstream_reader.h  codec_parser.cpp  codec_parser.h  encoded_audio_chunk.cpp  encoded_audio_chunk.h  encoded_video_chunk.cpp  encoded_video_chunk.h  hevc_parser.cpp  hevc_parser.h  image_decoder.cpp  image_decoder.h  intel_vpl_helpers.h  module.cpp  nal_utils.h  video_codec_capabilities.cpp  video_codec_capabilities.h  video_decoder.cpp  video_decoder.h  video_decoder_apple_video_toolbox.cpp  video_decoder_dav1d.cpp  video_decoder_intel_vpl.cpp  video_decoder_nvidia.cpp  video_decoder_vpx.cpp  video_encoder.cpp  video_encoder.h  video_encoder_aom.cpp  (+9 more)
src/dyn/: cuda.h  dyn.h  nvcuvid.h  nvenc.h  vpl.h
src/webcodecs/: __init__.py
tests/: audio_test_helpers.py  prop_avc_parser.py  prop_encode_decode.py  prop_fuzzing.py  prop_fuzzing_audio.py  prop_fuzzing_video.py  prop_hevc_parser.py  test_apple_audio_toolbox.py  test_apple_video_toolbox.py  test_audio_data.py  test_audio_duration.py  test_audio_on_dequeue.py  test_av1.py  test_avc_parser.py  test_bitrate_mode.py  test_codec_capabilities.py  test_codec_parser.py  test_compression_verification.py  test_decoder_description.py  test_encoded_audio_chunk.py  test_encoded_video_chunk.py  test_encoder_parser_integration.py  test_flac.py  test_free_threading.py  test_hevc_parser.py  test_hwa.py  test_image_decoder.py  test_intel_vpl.py  test_native_buffer.py  test_nvidia_video_codec.py  test_opus.py  test_opus_encode_decode.py  test_opus_encoder_config.py  test_opus_error_handling.py  test_opus_float32_padding.py  test_opus_last_frame.py  test_opus_timestamp.py  test_parallel_audio.py  test_parallel_video.py  test_video_encode_decode_quality.py  (+6 more)
tests/benchmarks/: bench_video_encoder.py
