[build-system]
requires = ["scikit-build-core", "nanobind>=2.10.2", "meson>=1.9"]
build-backend = "scikit_build_core.build"

[project]
name = "webcodecs-py"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "webcodecs-py"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.12"

[project.urls]
Source = "https://github.com/shiguredo/webcodecs-py"
Discord = "https://discord.gg/shiguredo"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "example" },
]
test = [
    "pytest",
    "pytest-repeat",
    "pytest-timeout",
    "pytest-benchmark",
    "hypothesis",
    "numpy",
    "blend2d-py",
]
lint = ["ruff", "ty"]
example = ["uvc-py", "portaudio-py", "raw-player", "blend2d-py", "mp4-py"]

[tool.scikit-build]
minimum-version = "0.11.3"
sdist.include = ["VERSION"]
build-dir = "_build/{wheel_tag}"

[tool.scikit-build.build]
verbose = false

[tool.scikit-build.cmake]
version = ">=4.2"
define = { "CMAKE_CXX_STANDARD" = "20" }
args = ["-DCMAKE_BUILD_TYPE=Release"]

# 環境変数 USE_NVIDIA_CUDA_TOOLKIT=1 が設定されている場合
[[tool.scikit-build.overrides]]
if.env.USE_NVIDIA_CUDA_TOOLKIT = true
cmake.define.USE_NVIDIA_CUDA_TOOLKIT = "ON"

[tool.scikit-build.ninja]
version = ">=1.13"

[tool.scikit-build.wheel]
packages = ["src/webcodecs"]
expand-macos-universal-tags = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"

[tool.uv]
package = false
managed = true
python-preference = "only-managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
# benchmark を有効にした場合は以下をコメントアウトする
# python_files = ["test_*.py", "bench_*.py"]
# addopts = "--benchmark-disable"

[tool.ruff]
target-version = "py312"
line-length = 100
include = ["examples/**/*.py", "src/**/*.py", "tests/**/*.py"]
